<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_post_detailed"
    android:layout_centerInParent="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:text="@string/post_title_string"
        android:textAlignment="center"
        android:textColor="@color/polyu_color"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/author_name"
        android:layout_below="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:gravity="start"
        android:text="@string/user_name_string"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="normal" />


    <!--        <ImageView-->
    <!--            android:id="@+id/user_profile_photo"-->
    <!--            android:layout_width="18dp"-->
    <!--            android:layout_height="18dp"-->
    <!--            android:layout_marginStart="10dp"-->
    <!--            android:layout_marginTop="40dp"-->

    <!--            android:contentDescription="TODO"-->
    <!--            android:src="@drawable/user_profile_photo" />-->


    <TextView
        android:id="@+id/time"
        android:layout_width="110dp"
        android:layout_height="15dp"
        android:layout_below="@id/post_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="end"
        android:text="@string/time_string"
        android:textColor="@color/time_color"
        android:textSize="12sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/post_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/author_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/post_content_string"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal" />


</RelativeLayout>
