<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_area_ek1"
    android:background="@drawable/post_area_ek1_shape"
    android:layout_centerInParent="true"
    android:layout_width="350dp"
    android:layout_height="120dp">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:singleLine="true"
            android:text="@string/post_title_string"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/user_profile_photo"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:contentDescription="TODO"
            android:src="@drawable/user_profile_photo" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="195dp"
            android:layout_height="18dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginStart="35dp"
            android:layout_marginTop="40dp"
            android:gravity="start"
            android:singleLine="true"
            android:text="@string/user_name_string"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/time"
            android:layout_width="110dp"
            android:layout_height="15dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginStart="240dp"
            android:layout_marginTop="40dp"
            android:gravity="start"
            android:text="@string/time_string"
            android:textColor="@color/time_color"
            android:textSize="12sp"
            android:textStyle="normal"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/post_content"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="20dp"
            android:singleLine="true"
            android:text="@string/post_content_string"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/comment_icon"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="315dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="comment_icon"
            android:src="@drawable/comment_icon" />

        <TextView
            android:id="@+id/comment_number"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/comment_icon"
            android:text="@string/comment_number_string"
            android:textColor="@color/polyu_color"
            android:textSize="14sp"
            android:textStyle="normal" />

</RelativeLayout>
